# microblx-motion-control

./: CMakeLists.txt  README.md
src/fwkin/: fwkin-test.usc  fwkin.cpp
src/manipulator/: manipulator.c  manipulator.lua  manipulator.md  manipulator.usc
src/trajgen_rml/: test_trajgen_rml.usc  trajgen_rml.cpp  trajgen_rml.md
usc/: app_jnt_moveto.usc  frag_jnt_vel.usc  frag_pid_sat.usc  mix_ptrig_nrt.usc
usc/cascaded-ctrl/: README.md  kinova-viz.usc  kinova.usc  posctrl-cascaded.usc  posctrl-test.usc  posctrl.usc  velctrl.usc
usc/jnt_moveto/: README.md  app_jnt_moveto.usc
usc/jnt_vel/: README.md  app_jnt_vel.usc  frag_jnt_vel.usc
usc/posctrl-builtin/: posctrl-builtin.usc
